--- a/.github/workflows/eks.yml
+++ b/.github/workflows/eks.yml
@@ -29,6 +29,9 @@ jobs:
     - name: Terraform Plan
       run: terraform plan
       working-directory: EKS  # Change this to your EKS cluster folder
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
     - name: Terraform Apply
       run: terraform apply -auto-approve
