--- a/.github/workflows/eks.yml
+++ b/.github/workflows/eks.yml
@@ -39,3 +39,27 @@ jobs:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        
+  destroy:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+    - name: Manual Approval
+      id: approval
+      run: |
+        echo "Do you want to destroy the EKS cluster?"
+        echo "If yes, then type 'yes' to confirm."
+        echo "If no, type 'no' to cancel."
+        echo "Approve and confirm:"
+        echo "::set-output name=confirm::${{ github.event.inputs.confirm }}"
+      env:
+        confirm: ${{ github.event.inputs.confirm }}
+      shell: bash
+
+    - name: Destroy EKS Cluster
+      if: steps.approval.outputs.confirm == 'yes'  # Only proceed if 'yes' is confirmed
+      run: terraform destroy -auto-approve
+      working-directory: EKS  # Change this to your EKS cluster folder
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
