--- a/.github/workflows/eks.yml
+++ b/.github/workflows/eks.yml
@@ -15,6 +15,9 @@ jobs:
       uses: hashicorp/setup-terraform@v1
       with:
         terraform_version: 1.0.8  # Use the version you need
+    - name: Terraform Init
+      run: terraform init
+      working-directory: EKS    
 
     - name: Terraform Destroy
       run: terraform destroy -auto-approve
