--- a/.github/workflows/eks.yml
+++ b/.github/workflows/eks.yml
@@ -23,6 +23,7 @@ jobs:
       with:
         aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ap-south-1
 
     - name: Terraform Init
       run: terraform init
